welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:4: error: value and is not a member of Boolean
while(2*b!=co and b=0){
              ^